[package]
name = "rust-cyber-solve"
version = "0.1.0"
authors = ["Simon Mezzomo <simon.mezzomo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
dxgcap = "0.2.4"
lazy_static = "1.4.0"
leptess = "0.13.1"
# Enable "clang-runtime" to avoid `libclang` shared library is not loaded on this thread
opencv = { version = "0.58.0", features = ["clang-runtime"] }
serde = { version = "1.0.130", features = ["derive"] }
tempfile = "3.2.0"

[dependencies.windows]
version = "0.35.0"
features = [
    "alloc",
    # Foundation::*,
    "Win32_Foundation",
    # Graphics::Gdi::{BeginPaint, BITMAP, BITMAPFILEHEADER, BITMAPINFOHEADER, EndPaint, GetDC, ReleaseDC, StretchDIBits, PAINTSTRUCT},
    "Win32_Graphics_Gdi",
    # System::LibraryLoader::GetModuleHandleA,
    "Win32_System_LibraryLoader",
    # UI::WindowsAndMessaging::*,
    "Win32_UI_WindowsAndMessaging",
]
